--- a/containers/SearchResults/SearchResults.module.css
+++ b/containers/SearchResults/SearchResults.module.css
@@ -3,4 +3,5 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  padding: 0 1rem 0 1rem;
 }
